# Tiktok_techjam

./: .gitignore  Sys_arch.drawio  gpt.drawio  requirements.txt
compliance-detection-system/: .env  .env.example  .gitignore  COMPREHENSIVE_ARTIFACTS_SUMMARY.md  GEMINI_SETUP.md  PROBLEM_STATEMENT_SOLUTION.md  PROJECT_OVERVIEW_SCRIPT.md  README.md  README_FULL.md  analysis_results.json  analyze_real_repo.py  demo_comprehensive_artifacts.py  demo_pipeline.py  enhance_artifacts_with_gemini.py  generate_evidence.py  pyproject.toml  setup_demo.py  test_cds.py  test_gemini_api.py  test_json_response.py  tiktok_auth_analysis.json
compliance-detection-system/artifacts/: ambiguous_report.html  ambiguous_results.csv  cli_demo_report.html  cli_demo_results.csv  cli_scan_result.json  comprehensive_demo_report.html  comprehensive_demo_results.csv  demo_report.html  demo_results.csv  test_scan_result.json
compliance-detection-system/artifacts/evidence/: account_deletion.json  account_deletion_final_record.json  account_deletion_rules_result.json  advertising_targeting.json  advertising_targeting_final_record.json  advertising_targeting_rules_result.json  age_verification.json  (+87 more)
compliance-detection-system/cds/: __init__.py
compliance-detection-system/compliance_detection_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
compliance-detection-system/data/: comprehensive_artifacts_config.yaml  comprehensive_features_dataset.csv  demo_dataset.csv  extended_policy_knowledge.json  feature_artifacts_repository.json  policy_snippets.json  real_repo_dataset.csv
compliance-detection-system/dataset_variations/: README.md
compliance-detection-system/documentation/: README.md
compliance-detection-system/sample_repo/: age_gate.py  content_recommendation.py  enhanced_features_with_artifacts.py  ncmec.py  privacy_settings.py  user_registration.py
compliance-detection-system/tests/: test_basic.py
(+68 files in other folders)
